повертає коменти в файл стилів

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,24 @@
+/* кастомні властивості або css зміні */
 :root {
+  /* fonts */
+
   --main-font: Roboto, sans-serif;
   --secondary-font: Raleway, sans-serif;
 
+  /* text colors */
   --main-text-color: #757575;
   --secondary-text-color: #ffffff;
   --accent-color: #2196f3;
   --title-color: #212121;
   --footer-link-color: rgba(255, 255, 255, 0.6);
   --logo-black-color: #000000;
-  --button-hover-color: #188CE8;
+  --button-hover-color: #188ce8;
 
+  /* background colors */
   --main-background-color: #ffffff;
   --dark-background-color: #2f303a;
   --secondary-background-color: #f5f4fa;
-  --header-board-color: #ECECEC;
-
+  --header-board-color: #ececec;
 }
 
 .body {
@@ -38,6 +42,12 @@
   clip-path: inset(50%);
   margin: -1px;
 }
+
+/* 
+===============
+Header
+===============
+ */
 
 .logo {
   text-decoration: none;
@@ -93,6 +103,11 @@
   color: var(--main-text-color);
 }
 
+/*
+==================
+section hero
+==================
+ */
 .hero {
   background-color: var(--dark-background-color);
   text-align: center;
@@ -126,7 +141,11 @@
   background-color: var(--button-hover-color);
 }
 
-
+/*
+==================
+section quality
+==================
+ */
 .second-title,
 .hobbies-title,
 .team-title {
@@ -151,6 +170,17 @@
   line-height: 1.71;
 }
 
+/*
+==================
+section hobbies
+==================
+ */
+
+/*
+==================
+section team
+==================
+ */
 .team {
   background-color: var(--secondary-background-color);
 }
@@ -174,6 +204,11 @@
   background-color: var(--main-background-color);
 }
 
+/*
+==================
+section portfolio
+==================
+ */
 .portfolio-title {
   font-size: 44px;
   font-weight: 900;
@@ -231,6 +266,12 @@
 
   color: var(--main-text-color);
 }
+
+/*
+==================
+Footer
+==================
+ */
 
 .footer {
   background-color: var(--dark-background-color);
