--- a/css/style-with-comment-for-me.css
+++ b/css/style-with-comment-for-me.css
@@ -1,46 +1,46 @@
 /* кастомні властивості або css зміні */
 :root {
-    /* fonts */
+  /* fonts */
 
-    --main-font: Roboto, sans-serif;
-    --secondary-font: Raleway, sans-serif;
+  --main-font: Roboto, sans-serif;
+  --secondary-font: Raleway, sans-serif;
 
-    /* text colors */
-    --main-text-color: #757575;
-    --secondary-text-color: #ffffff;
-    --accent-color: #2196f3;
-    --title-color: #212121;
-    --footer-link-color: rgba(255, 255, 255, 0.6);
-    --logo-black-color: #000000;
-    --button-hover-color: #188CE8;
+  /* text colors */
+  --main-text-color: #757575;
+  --secondary-text-color: #ffffff;
+  --accent-color: #2196f3;
+  --title-color: #212121;
+  --footer-link-color: rgba(255, 255, 255, 0.6);
+  --logo-black-color: #000000;
+  --button-hover-color: #188ce8;
 
-    /* background colors */
-    --main-background-color: #ffffff;
-    --dark-background-color: #2f303a;
-    --secondary-background-color: #f5f4fa;
-    --header-board-color: #ECECEC;
+  /* background colors */
+  --main-background-color: #ffffff;
+  --dark-background-color: #2f303a;
+  --secondary-background-color: #f5f4fa;
+  --header-board-color: #ececec;
 }
 
 .body {
-    font-family: var(--main-font);
-    font-size: 14px;
-    letter-spacing: 0.03em;
+  font-family: var(--main-font);
+  font-size: 14px;
+  letter-spacing: 0.03em;
 
-    color: var(--main-text-color);
-    background-color: var(--main-background-color);
+  color: var(--main-text-color);
+  background-color: var(--main-background-color);
 }
 
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 /* 
@@ -50,35 +50,35 @@ Header
  */
 
 .logo {
-    text-decoration: none;
-    font-family: var(--secondary-font);
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
+  text-decoration: none;
+  font-family: var(--secondary-font);
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
 
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .logo-black-color {
-    color: var(--logo-black-color);
+  color: var(--logo-black-color);
 }
 
 .logo-white-color {
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 .navigation-link {
-    font-weight: 500;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 
-    text-decoration: none;
+  text-decoration: none;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .active-text-color,
@@ -90,17 +90,17 @@ Header
 .footer-address:focus,
 .footer-link:hover,
 .footer-link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .navigation-contact {
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-    text-decoration: none;
+  text-decoration: none;
 
-    color: var(--main-text-color);
+  color: var(--main-text-color);
 }
 
 /*
@@ -109,36 +109,36 @@ section hero
 ==================
  */
 .hero {
-    background-color: var(--dark-background-color);
-    text-align: center;
+  background-color: var(--dark-background-color);
+  text-align: center;
 }
 
 .hero-title {
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .hero-button {
-    font-family: inherit;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 
-    color: var(--secondary-text-color);
-    background-color: var(--accent-color);
-    border: none;
-    border-radius: 4px;
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 4px;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: var(--button-hover-color);
+  background-color: var(--button-hover-color);
 }
 
 /*
@@ -149,25 +149,25 @@ section quality
 .second-title,
 .hobbies-title,
 .team-title {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.16;
-    text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.16;
+  text-align: center;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .third-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14px;
-    text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14px;
+  text-transform: uppercase;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .quality-text {
-    line-height: 1.71;
+  line-height: 1.71;
 }
 
 /*
@@ -182,26 +182,26 @@ section team
 ==================
  */
 .team {
-    background-color: var(--secondary-background-color);
+  background-color: var(--secondary-background-color);
 }
 
 .team-third-title {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .team-text {
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .team-item {
-    background-color: var(--main-background-color);
+  background-color: var(--main-background-color);
 }
 
 /*
@@ -210,61 +210,61 @@ section portfolio
 ==================
  */
 .portfolio-title {
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-align: center;
-    text-transform: uppercase;
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  text-transform: uppercase;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .portfolio-btn {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-    border: none;
-    height: 38px;
-    border-radius: 4px;
+  border: none;
+  height: 38px;
+  border-radius: 4px;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .activ-btn,
 .portfolio-btn:hover,
 .portfolio-btn:focus {
-    background-color: var(--accent-color);
-    color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  color: var(--secondary-text-color);
 }
-
 
 .portfolio-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.portfolio-item outline: 1px solid #eeeeee;
+.portfolio-item {
+  outline: 1px solid #eeeeee;
 }
 
 .portfolio-second-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 .portfolio-text {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
 
-    color: var(--main-text-color);
+  color: var(--main-text-color);
 }
 
 /*
@@ -274,25 +274,23 @@ Footer
  */
 
 .footer {
-    background-color: var(--dark-background-color);
+  background-color: var(--dark-background-color);
 }
 
 .footer-address {
-    line-height: 1.71;
+  line-height: 1.71;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 
-    text-decoration: none;
-    font-style: normal;
+  text-decoration: none;
+  font-style: normal;
 }
 
-
-
 .footer-link {
-    line-height: 1.71;
+  line-height: 1.71;
 
-    color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 
-    text-decoration: none;
-    font-style: normal;
+  text-decoration: none;
+  font-style: normal;
 }
