розмітка портфоліо Flex

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,6 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-
-  outline: 1px solid red;
 }
 
 .section {
@@ -96,6 +94,9 @@ Header
 .header .container {
   display: flex;
   align-items: center;
+}
+.header{
+  border-bottom: 1px solid var(--header-board-color);
 }
 
 .logo {
@@ -190,11 +191,12 @@ section hero
 .hero {
   background-color: var(--dark-background-color);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
-  padding-top: 200px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
   width: 696px;
@@ -220,8 +222,6 @@ section hero
   border: none;
   padding: 10px 32px;
   border-radius: 4px;
-
-  margin-bottom: 200px;
 }
 
 .hero-button:hover,
@@ -231,15 +231,12 @@ section hero
 
 /*
 ==================
-section quality
+section features
 ==================
  */
 
-.quality {
-  padding-top: 94px;
-}
- 
-.quality .list {
+
+.features .list {
   display: flex;
 }
 
@@ -254,17 +251,17 @@ section quality
   color: var(--title-color);
 }
 
-.quality-item {
+.features-item {
   margin-right: 30px;
   width: 270px;
 }
 
-.quality-item:last-child {
+.features-item:last-child {
   margin-right: 0;
 }
 
-.quality .third-title {
-  padding-bottom: 10px;
+.features .third-title {
+  margin-bottom: 10px;
 }
 
 .third-title {
@@ -276,9 +273,9 @@ section quality
   color: var(--title-color);
 }
 
-.quality-text {
-  font-size: 14px;
-  line-height: 1.71;
+.features-text {
+  font-weight: 400;
+    line-height: 1.71;
 }
 
 /*
@@ -287,19 +284,18 @@ section hobbies
 ==================
  */
 
-.hobbies{
-  background-color: #2196f3;
+.hobbies {
+  padding-bottom: 94px;
 }
 
-
-.hobbies .list{
+.hobbies .list {
   display: flex;
 }
-.hobbies-title{
+.hobbies-title {
   margin-bottom: 50px;
 }
 
-.hobbies-item{
+.hobbies-item {
   margin-right: 30px;
 }
 
@@ -314,10 +310,10 @@ section team
 .team {
   background-color: var(--secondary-background-color);
 }
-.team .list{
+.team .list {
   display: flex;
 }
-.team-title{
+.team-title {
   margin-bottom: 50px;
 }
 .team-img {
@@ -325,7 +321,7 @@ section team
 }
 
 .team-third-title {
-margin-bottom: 10px;
+  margin-bottom: 10px;
 
   font-weight: 500;
   font-size: 16px;
@@ -336,7 +332,7 @@ margin-bottom: 10px;
 }
 
 .team-text {
-margin-bottom: 30px;
+  margin-bottom: 30px;
 
   font-size: 16px;
   line-height: 1.19;
@@ -346,6 +342,10 @@ margin-bottom: 30px;
 .team-item {
   margin-right: 30px;
   background-color: var(--main-background-color);
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-item:last-child {
@@ -357,6 +357,19 @@ margin-bottom: 30px;
 section portfolio
 ==================
  */
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.portfolio-filter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-bottom: 50px;
+}
+
 .portfolio-title {
   font-size: 44px;
   font-weight: 900;
@@ -369,18 +382,26 @@ section portfolio
 }
 
 .portfolio-btn {
+  
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.62;
+  line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
+  cursor: pointer;
 
   border: none;
-  height: 38px;
   border-radius: 4px;
+  padding: 6px 22px;
 
   color: var(--title-color);
+}
+.portfolio .items {
+  margin-right: 8px;
+}
+.portfolio .items:last-child {
+  margin-right: 0;
 }
 
 .activ-btn,
@@ -390,15 +411,31 @@ section portfolio
   color: var(--secondary-text-color);
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .portfolio-link {
   text-decoration: none;
 }
 
 .portfolio-item {
-  outline: 1px solid #eeeeee;
+  width: calc((100% - 2 * 30px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.portfolio-item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .portfolio-second-title {
+margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -414,6 +451,12 @@ section portfolio
 
   color: var(--main-text-color);
 }
+.portfolio-item .text {
+  padding: 20px 24px;
+      border-left: 1px solid #eee;
+      border-right: 1px solid #eee;
+      border-bottom: 1px solid #eee;
+}
 
 /*
 ==================
@@ -423,24 +466,22 @@ Footer
 
 .footer {
   background-color: var(--dark-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .logo {
-  display: block;
-  padding-top: 60px;
-  padding-bottom: 20px;
+  display: inline-block;
+  margin-bottom: 20px;
 }
 
 .footer-item {
-  padding-bottom: 9px;
+  margin-bottom: 9px;
 }
 .footer-item:last-child {
-  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
-.footer .list {
-  padding-bottom: 60px;
-}
 .footer-address {
   line-height: 1.71;
 
