змінює значення кольорів на var()

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,14 @@
   --dark-background-color: #2f303a;
   --secondary-background-color: #f5f4fa;
   --header-board-color: #ececec;
+  --border-color: #EEEEEE;
+
+  /* shadow colors */
+  --card-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+
 }
 /*#endregion*/
 /*#region Властивості body за замовченням */
@@ -327,8 +335,7 @@ img {
   margin-right: 30px;
   background-color: var(--main-background-color);
 
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--card-shadow)
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -432,9 +439,9 @@ img {
 }
 .portfolio-item .text {
   padding: 20px 24px;
-  border-left: 1px solid #eee;
-  border-right: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
 }
 /* #endregion */
 /*#region Footer */
@@ -469,7 +476,7 @@ img {
 .footer-link {
   line-height: 1.71;
 
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--footer-link-color);
 
   text-decoration: none;
   font-style: normal;
