--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ img {
   margin-right: 30px;
   background-color: var(--main-background-color);
 
-  box-shadow: var(--card-shadow)
+  box-shadow: var(--card-shadow);
   border-radius: 0px 0px 4px 4px;
 }
 
