--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,19 @@ img {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/business.jpg');
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero > .container {
 }
 
 .hero-title {
@@ -246,8 +259,7 @@ img {
   background-color: var(--button-hover-color);
 }
 
-.hero > .container {
-  background-image: url('/images/business.jpg');
+.hero {
 }
 
 /* #endregion */
