--- a/css/styles.css
+++ b/css/styles.css
@@ -371,11 +371,15 @@ img {
   background-color: var(--main-background-color);
 
   box-shadow: var(--card-shadow);
-  border-radius: 0px 0px 4px 4px;
+  border-radius: 4px;
 }
 
 .team-item:last-child {
   margin-right: 0;
+}
+.team-img{
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 /* #endregion */
